Fix overflow bug and sticky button

--- a/src/styles/Button.module.scss
+++ b/src/styles/Button.module.scss
@@ -64,7 +64,7 @@
 
   cursor: pointer;
 
-  position: absolute;
+  position: fixed;
   bottom: 16px;
   left: 16px;
 
