--- a/src/styles/Error.module.scss
+++ b/src/styles/Error.module.scss
@@ -10,6 +10,7 @@
     flex-direction: column;
     gap: 1.2rem;
 
+    text-align: center;
     margin-top: 9.2rem;
   }
 }
