--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -30,5 +30,5 @@ body {
 
   position: relative;
 
-  overflow: hidden;
+  overflow-x: hidden;
 }
